[package]
name = "pass"
edition = "2021"
version = "0.1.0"
authors = ["Noel Espino Córdova <hi@ednoesco.com>"]
description = "Personal encrypted password manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
home = "0.5.3"
